HipsterShop/kubernetes-manifests/gateway/route-ad-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: hipster-backend
  name: ad-route
  
  labels:
    app: adservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/ads
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /ads
      backendRefs:
        - name: adservice
          port: 9555
