HipsterShop/kubernetes-manifests/gateway/route-auth-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: hipster-backend
  name: auth-route

  labels:
    app: authservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/auth/login
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /login
      backendRefs:
        - name: authservice
          port: 8081
    - matches:
        - path:
            type: Exact
            value: /api/auth/signup
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /signup
      backendRefs:
        - name: authservice
          port: 8081
    - matches:
        - path:
            type: Exact
            value: /api/auth/logout
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /logout
      backendRefs:
        - name: authservice
          port: 8081
    - matches:
        - path:
            type: Exact
            value: /api/auth/me
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /me
      backendRefs:
        - name: authservice
          port: 8081
