HipsterShop/kubernetes-manifests/gateway/route-checkout-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: hipster-backend
  name: checkout-route
  
  labels:
    app: checkoutservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/checkout
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /checkout
      backendRefs:
        - name: checkoutservice
          port: 5050
