HipsterShop/kubernetes-manifests/gateway/route-email-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: hipster-backend
  name: email-route
  
  labels:
    app: emailservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/email/send-confirmation
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /send-confirmation
      backendRefs:
        - name: emailservice
          port: 8080
