HipsterShop/kubernetes-manifests/gateway/route-payment-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: hipster-backend
  name: payment-route
  
  labels:
    app: paymentservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/payment/charge
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /charge
      backendRefs:
        - name: paymentservice
          port: 50051
