HipsterShop/kubernetes-manifests/gateway/route-shipping-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: hipster-backend
  name: shipping-route
  
  labels:
    app: shippingservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/shipping
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: shippingservice
          port: 50051
